# Projector

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  test.py
projector/: __init__.py  cfg.py  projector.py  utils.py
projector/scripts/Windows/: open_url.ps1
projector/scripts/macos/: open_app  open_folder
projector/scripts/ubuntu/: open_folder
projector/scripts/windows/: open_folder.ps1  open_url.ps1
projector/templates/default/: PROJECTFILE
projector/templates/demo/: PROJECTFILE
projector/templates/test_open_folder/: PROJECTFILE
tests/: test.py
